{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 1360,
  "lineage": "025c78b9-06d9-7612-0bc0-1c6696f9e12f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:internet-gateway/igw-07d7e5b638c47c48a",
            "id": "igw-07d7e5b638c47c48a",
            "owner_id": "790283579703",
            "tags": {
              "Project": "SCORINGML"
            },
            "tags_all": {
              "Project": "SCORINGML"
            },
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "dependencies": [
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:790283579703:loadbalancer/app/SCORINGML-lb/209eded0e13bc186",
            "arn_suffix": "app/SCORINGML-lb/209eded0e13bc186",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "SCORINGML-lb-1967605425.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:790283579703:loadbalancer/app/SCORINGML-lb/209eded0e13bc186",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "SCORINGML-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b9991f8dd31b4734"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-046a6cc69d58ca065"
              },
              {
                "subnet_id": "subnet-0c73e3ab56e41d152"
              }
            ],
            "subnets": [
              "subnet-046a6cc69d58ca065",
              "subnet-0c73e3ab56e41d152"
            ],
            "vpc_id": "vpc-0d6404a0674d24c7a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:790283579703:listener/app/SCORINGML-lb/209eded0e13bc186/d618f9559864bafa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:790283579703:targetgroup/SCORINGML-tg/f32092ca3489d7e8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:790283579703:listener/app/SCORINGML-lb/209eded0e13bc186/d618f9559864bafa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:790283579703:loadbalancer/app/SCORINGML-lb/209eded0e13bc186",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_lb_target_group.scoring_tg",
            "aws_security_group.lb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "scoring_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:790283579703:targetgroup/SCORINGML-tg/f32092ca3489d7e8",
            "arn_suffix": "targetgroup/SCORINGML-tg/f32092ca3489d7e8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:790283579703:targetgroup/SCORINGML-tg/f32092ca3489d7e8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:790283579703:loadbalancer/app/SCORINGML-lb/209eded0e13bc186"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "SCORINGML-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "dependencies": [
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:route-table/rtb-08b384658ef848834",
            "id": "rtb-08b384658ef848834",
            "owner_id": "790283579703",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "81.57.1.204/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d7e5b638c47c48a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Project": "SCORINGML"
            },
            "tags_all": {
              "Project": "SCORINGML"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf8aa220a749302c",
            "route_table_id": "rtb-08b384658ef848834",
            "subnet_id": "subnet-046a6cc69d58ca065"
          },
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.scoring_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf62e3e868b4c35c",
            "route_table_id": "rtb-08b384658ef848834",
            "subnet_id": "subnet-0c73e3ab56e41d152"
          },
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:security-group/sg-028b6234aba883b6e",
            "description": "Security group for features server efs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028b6234aba883b6e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f93e67fae957cb9"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg",
            "name_prefix": "",
            "owner_id": "790283579703",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.features_server",
            "aws_security_group.lb_sg",
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoints-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:security-group/sg-06647eb059ce9f205",
            "description": "Security group for vpc endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06647eb059ce9f205",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-06f93e67fae957cb9"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "endppoints-sg",
            "name_prefix": "",
            "owner_id": "790283579703",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.features_server",
            "aws_security_group.lb_sg",
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "features_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:security-group/sg-06f93e67fae957cb9",
            "description": "Security group for features server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f93e67fae957cb9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9991f8dd31b4734"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "feature-server-sg",
            "name_prefix": "",
            "owner_id": "790283579703",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:security-group/sg-0b9991f8dd31b4734",
            "description": "Security group for features server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9991f8dd31b4734",
            "ingress": [
              {
                "cidr_blocks": [
                  "81.57.1.204/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "load-balancer-sg",
            "name_prefix": "",
            "owner_id": "790283579703",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:subnet/subnet-0f87b902502fff81d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f87b902502fff81d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790283579703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SCORINGML-private-subnet-0",
              "Project": "SCORINGML"
            },
            "tags_all": {
              "Name": "SCORINGML-private-subnet-0",
              "Project": "SCORINGML"
            },
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "dependencies": [
            "aws_vpc.scoring_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:subnet/subnet-0c1fdac42afa4466f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1fdac42afa4466f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790283579703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SCORINGML-private-subnet-1",
              "Project": "SCORINGML"
            },
            "tags_all": {
              "Name": "SCORINGML-private-subnet-1",
              "Project": "SCORINGML"
            },
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "dependencies": [
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:subnet/subnet-046a6cc69d58ca065",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046a6cc69d58ca065",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790283579703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SCORINGML-public-subnet-0",
              "Project": "SCORINGML"
            },
            "tags_all": {
              "Name": "SCORINGML-public-subnet-0",
              "Project": "SCORINGML"
            },
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "dependencies": [
            "aws_vpc.scoring_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:subnet/subnet-0c73e3ab56e41d152",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c73e3ab56e41d152",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790283579703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SCORINGML-public-subnet-1",
              "Project": "SCORINGML"
            },
            "tags_all": {
              "Name": "SCORINGML-public-subnet-1",
              "Project": "SCORINGML"
            },
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "dependencies": [
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "scoring_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:vpc/vpc-0d6404a0674d24c7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-050171c6b0ecfe6c2",
            "default_route_table_id": "rtb-0f3abcf6a0213a08c",
            "default_security_group_id": "sg-0fa18f71206e720dc",
            "dhcp_options_id": "dopt-0068fff79f7e9633b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6404a0674d24c7a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f3abcf6a0213a08c",
            "owner_id": "790283579703",
            "tags": {
              "Name": "SCORINGML-vpc",
              "Project": "SCORINGML"
            },
            "tags_all": {
              "Name": "SCORINGML-vpc",
              "Project": "SCORINGML"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:vpc-endpoint/vpce-0ed955522389c4125",
            "dns_entry": [
              {
                "dns_name": "vpce-0ed955522389c4125-aihcq6o6.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0ed955522389c4125-aihcq6o6-eu-west-1b.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0ed955522389c4125-aihcq6o6-eu-west-1a.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "logs.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z00237483LB10PNX54ZQE"
              },
              {
                "dns_name": "logs.eu-west-1.api.aws",
                "hosted_zone_id": "Z02159848GLLFNFZ5Q46"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ed955522389c4125",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a2e5592469c87c05",
              "eni-0d038a24e04f42736"
            ],
            "owner_id": "790283579703",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06647eb059ce9f205"
            ],
            "service_name": "com.amazonaws.eu-west-1.logs",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.202",
                "subnet_id": "subnet-0f87b902502fff81d"
              },
              {
                "ipv4": "10.0.4.109",
                "subnet_id": "subnet-0c1fdac42afa4466f"
              }
            ],
            "subnet_ids": [
              "subnet-0c1fdac42afa4466f",
              "subnet-0f87b902502fff81d"
            ],
            "tags": {
              "Name": "SCORINGML-cloudwatch-endpoint"
            },
            "tags_all": {
              "Name": "SCORINGML-cloudwatch-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "dependencies": [
            "aws_security_group.endpoints-sg",
            "aws_security_group.features_server",
            "aws_security_group.lb_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:vpc-endpoint/vpce-0b767278dfd55390e",
            "dns_entry": [
              {
                "dns_name": "vpce-0b767278dfd55390e-h7xnqchj.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0b767278dfd55390e-h7xnqchj-eu-west-1b.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0b767278dfd55390e-h7xnqchj-eu-west-1a.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "api.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z03357552O88R0UM00SF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b767278dfd55390e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04c896946dc2bd411",
              "eni-068015105092608ea"
            ],
            "owner_id": "790283579703",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06647eb059ce9f205"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.api",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.163",
                "subnet_id": "subnet-0f87b902502fff81d"
              },
              {
                "ipv4": "10.0.4.218",
                "subnet_id": "subnet-0c1fdac42afa4466f"
              }
            ],
            "subnet_ids": [
              "subnet-0c1fdac42afa4466f",
              "subnet-0f87b902502fff81d"
            ],
            "tags": {
              "Name": "SCORINGML-ecr-api-endpoint"
            },
            "tags_all": {
              "Name": "SCORINGML-ecr-api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "dependencies": [
            "aws_security_group.endpoints-sg",
            "aws_security_group.features_server",
            "aws_security_group.lb_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:vpc-endpoint/vpce-0de0947c00b4d1052",
            "dns_entry": [
              {
                "dns_name": "vpce-0de0947c00b4d1052-vu5m7kqm.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0de0947c00b4d1052-vu5m7kqm-eu-west-1a.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0de0947c00b4d1052-vu5m7kqm-eu-west-1b.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "dkr.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z02160053YAL2106D28Y"
              },
              {
                "dns_name": "*.dkr.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z02160053YAL2106D28Y"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0de0947c00b4d1052",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-034ff39aae0d663ab",
              "eni-0a1686619867e9b0e"
            ],
            "owner_id": "790283579703",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06647eb059ce9f205"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.dkr",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.207",
                "subnet_id": "subnet-0f87b902502fff81d"
              },
              {
                "ipv4": "10.0.4.54",
                "subnet_id": "subnet-0c1fdac42afa4466f"
              }
            ],
            "subnet_ids": [
              "subnet-0c1fdac42afa4466f",
              "subnet-0f87b902502fff81d"
            ],
            "tags": {
              "Name": "SCORINGML-ecr-dkr-endpoint"
            },
            "tags_all": {
              "Name": "SCORINGML-ecr-dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "dependencies": [
            "aws_security_group.endpoints-sg",
            "aws_security_group.features_server",
            "aws_security_group.lb_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:vpc-endpoint/vpce-0585c4277d1c57d5e",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0585c4277d1c57d5e",
            "ip_address_type": "ipv4",
            "owner_id": "790283579703",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06647eb059ce9f205"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecs",
            "state": "available",
            "tags": {
              "Name": "SCORINGML-ecs-endpoint"
            },
            "tags_all": {
              "Name": "SCORINGML-ecs-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "dependencies": [
            "aws_security_group.endpoints-sg",
            "aws_security_group.features_server",
            "aws_security_group.lb_sg",
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs-agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:vpc-endpoint/vpce-077f2275e7951027d",
            "dns_entry": [
              {
                "dns_name": "vpce-077f2275e7951027d-xl693k50.ecs-a.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-077f2275e7951027d-xl693k50-eu-west-1a.ecs-a.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-077f2275e7951027d-xl693k50-eu-west-1b.ecs-a.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ecs-a.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z03286523IL1XLF4TTMAA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-077f2275e7951027d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-003d64ee0bf63eaac",
              "eni-0746e9a66ca6e9d45"
            ],
            "owner_id": "790283579703",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06647eb059ce9f205"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecs-agent",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.142",
                "subnet_id": "subnet-0f87b902502fff81d"
              },
              {
                "ipv4": "10.0.4.206",
                "subnet_id": "subnet-0c1fdac42afa4466f"
              }
            ],
            "subnet_ids": [
              "subnet-0c1fdac42afa4466f",
              "subnet-0f87b902502fff81d"
            ],
            "tags": {
              "Name": "SCORINGML-ecs-agent-endpoint"
            },
            "tags_all": {
              "Name": "SCORINGML-ecs-agent-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "dependencies": [
            "aws_security_group.endpoints-sg",
            "aws_security_group.features_server",
            "aws_security_group.lb_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs-telemetry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:vpc-endpoint/vpce-025d7813f0a272557",
            "dns_entry": [
              {
                "dns_name": "vpce-025d7813f0a272557-54rqkw8v.ecs-t.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-025d7813f0a272557-54rqkw8v-eu-west-1a.ecs-t.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-025d7813f0a272557-54rqkw8v-eu-west-1b.ecs-t.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ecs-t.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z00237542945487DGGGX7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-025d7813f0a272557",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0bec49c03a393364a",
              "eni-0cf4ed3dfcb055202"
            ],
            "owner_id": "790283579703",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06647eb059ce9f205"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecs-telemetry",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.30",
                "subnet_id": "subnet-0f87b902502fff81d"
              },
              {
                "ipv4": "10.0.4.141",
                "subnet_id": "subnet-0c1fdac42afa4466f"
              }
            ],
            "subnet_ids": [
              "subnet-0c1fdac42afa4466f",
              "subnet-0f87b902502fff81d"
            ],
            "tags": {
              "Name": "SCORINGML-ecs-telemetry-endpoint"
            },
            "tags_all": {
              "Name": "SCORINGML-ecs-telemetry-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "dependencies": [
            "aws_security_group.endpoints-sg",
            "aws_security_group.features_server",
            "aws_security_group.lb_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:790283579703:vpc-endpoint/vpce-046a657691a8784cf",
            "cidr_blocks": [
              "3.5.64.0/21",
              "3.5.72.0/23",
              "52.92.0.0/17",
              "52.218.0.0/17"
            ],
            "id": "vpce-046a657691a8784cf",
            "owner_id": "790283579703",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0f3abcf6a0213a08c"
            ],
            "service_name": "com.amazonaws.eu-west-1.s3",
            "state": "available",
            "tags": {
              "Name": "SCORINGML-s3-endpoint"
            },
            "tags_all": {
              "Name": "SCORINGML-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0d6404a0674d24c7a"
          },
          "dependencies": [
            "aws_vpc.scoring_vpc"
          ]
        }
      ]
    }
  ]
}